--- a/css/tests.css
+++ b/css/tests.css
@@ -22,13 +22,55 @@ body {
     color: red;
 }
 
+.test #headerscore{
+    font-size: 250%;
+    text-align: center;
+}
+
 .test .score{
     font-size: 500%;
     text-align: center;
 }
 
 
-input[type=range] {
+/* input[type=range] {
     margin: 0;
     width: 100%;
+    height: 20%
+} */
+
+input[type=range] {
+    -webkit-appearance:none;
+    background:#000;
+    height:24px;
+    width:100%;
+    border-radius:8px;
+  }
+  input[type=range]::-webkit-slider-thumb{
+    -webkit-appearance:none;
+    background:#999;
+    height:40px;
+    width:80px;
+    border-radius:10%;
+  }
+  input[type=range]::-ms-tooltip{
+    display:none;
+  }
+  input[type=range]::-moz-range-track{
+    height:0;
+  }
+  input[type=range]::-moz-range-thumb{
+    background:#f00;
+    height:20px;
+    width:20px;
+    border:none;
+    border-radius:50%;
+  }
+
+.test p {
+    text-align: center;
+}
+.test p button{
+    width: 90%;
+    height: 5%;
 }
